[gd_scene load_steps=14 format=3 uid="uid://ew53cbfamypn"]

[ext_resource type="Script" uid="uid://b1hns1kcm8igy" path="res://entities/player/Player.gd" id="1_1"]
[ext_resource type="Script" uid="uid://15fpysi53wp8" path="res://entities/player/InputComponent.gd" id="2_1"]
[ext_resource type="Script" uid="uid://wkdmrxhphk6x" path="res://entities/player/MovementComponent.gd" id="3_1"]
[ext_resource type="Resource" uid="uid://dyvg7kxmx0g4l" path="res://resources/gameplay/DefaultMovementData.tres" id="4_1"]
[ext_resource type="Script" uid="uid://cl4a5wq8vfuex" path="res://entities/player/AnimationComponent.gd" id="5_1"]
[ext_resource type="Script" uid="uid://bq1tubplyf1g6" path="res://entities/player/StateMachine.gd" id="6_1"]
[ext_resource type="Script" uid="uid://duqsvb2aw0d00" path="res://entities/player/states/Idle.gd" id="7_1"]
[ext_resource type="Script" uid="uid://bi8asnelxs0ds" path="res://entities/player/states/Run.gd" id="8_1"]
[ext_resource type="Script" uid="uid://d134vd38f2nlx" path="res://entities/player/states/Jump.gd" id="9_1"]
[ext_resource type="Script" uid="uid://cj3u3xxi4iepn" path="res://entities/player/states/Fall.gd" id="10_1"]
[ext_resource type="Script" uid="uid://d3l6slaecgt7o" path="res://entities/player/states/WallSlide.gd" id="11_1"]
[ext_resource type="PackedScene" uid="uid://bq5hdgxj8j7wu" path="res://entities/saree/SareeController.tscn" id="13_saree"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1"]
radius = 12.0
height = 86.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(37, 324)
shape = SubResource("CapsuleShape2D_1")

[node name="Visuals" type="Node2D" parent="."]

[node name="SareeAnchor" type="Marker2D" parent="Visuals"]
position = Vector2(0, -30)

[node name="PlaceholderRect" type="ColorRect" parent="Visuals"]
offset_top = -29.0
offset_right = 120.0
offset_bottom = 371.0
color = Color(0.4, 0.7, 1, 1)

[node name="Components" type="Node" parent="."]

[node name="InputComponent" type="Node" parent="Components"]
script = ExtResource("2_1")

[node name="MovementComponent" type="Node" parent="Components"]
script = ExtResource("3_1")
movement_data = ExtResource("4_1")

[node name="AnimationComponent" type="Node" parent="Components"]
script = ExtResource("5_1")

[node name="StateMachine" type="Node" parent="Components"]
script = ExtResource("6_1")

[node name="Idle" type="Node" parent="Components/StateMachine"]
script = ExtResource("7_1")

[node name="Run" type="Node" parent="Components/StateMachine"]
script = ExtResource("8_1")

[node name="Jump" type="Node" parent="Components/StateMachine"]
script = ExtResource("9_1")

[node name="Fall" type="Node" parent="Components/StateMachine"]
script = ExtResource("10_1")

[node name="WallSlide" type="Node" parent="Components/StateMachine"]
script = ExtResource("11_1")

[node name="SareeSystem" parent="." instance=ExtResource("13_saree")]
position = Vector2(28, 53)
